--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta
       name="description"
       content="OpenClawAgent.ai explains what OpenClaw is, how to install it, and how to use it safely." />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +23,36 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="brand">
-          <span class="brand-mark">OC</span>
+          <span class="brand-mark" aria-hidden="true">
+            <svg viewBox="0 0 64 64" role="img" focusable="false">
+              <defs>
+                <linearGradient id="claw-gradient" x1="0" y1="0" x2="1" y2="1">
+                  <stop offset="0%" stop-color="#ff6b35" />
+                  <stop offset="60%" stop-color="#1f7a8c" />
+                  <stop offset="100%" stop-color="#0b3c49" />
+                </linearGradient>
+              </defs>
+              <circle cx="32" cy="32" r="26" fill="none" stroke="url(#claw-gradient)" stroke-width="4" />
+              <path
+                d="M20 20c-6 6-7 14-4 22"
+                fill="none"
+                stroke="url(#claw-gradient)"
+                stroke-width="4"
+                stroke-linecap="round" />
+              <path
+                d="M32 16c-3 7-2 15 2 22"
+                fill="none"
+                stroke="url(#claw-gradient)"
+                stroke-width="4"
+                stroke-linecap="round" />
+              <path
+                d="M44 20c4 7 3 15-2 22"
+                fill="none"
+                stroke="url(#claw-gradient)"
+                stroke-width="4"
+                stroke-linecap="round" />
+            </svg>
+          </span>
           <span class="brand-name">OpenClawAgent.ai</span>
         </div>
         <nav class="nav">
