update with blog

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <a href="#what">What it is</a>
           <a href="#install">Install</a>
           <a href="#security">Security</a>
+          <a href="/blog/">Field Notes</a>
         </nav>
         <a class="btn btn-ghost" href="#install">Get started</a>
       </div>
