update and add sitemaps

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta
       name="description"
       content="OpenClawAgent.ai explains what OpenClaw is, how to install it, and how to use it safely." />
+    <link rel="canonical" href="https://www.openclawagent.ai/" />
+    <meta property="og:url" content="https://www.openclawagent.ai/" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
